manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ibuki-nginx
spec:
  selector:
    app: ibuki-nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
   type: LoadBalancer
